@@ -84,6 +84,7 @@ Bug fixes:
   (Benoît Vaugon, report by Vassili Karpov)
 - PR#6749: ocamlopt returns n for (n mod 1) instead of 0
   (Mark Shinwell and Jérémie Dimino)
+- PR#6758: Ocamldoc "analyse_module: parsetree and typedtree don't match"
 - PR#6759: big_int_of_string incorrectly parses some hexa literals
   (Damien Doligez, report by Pierre-yves Strub)
 - PR#6763: #show with -short-paths doesn't select shortest type paths
